tests/NormalTests/paczka1/small_fuzzy/97112542.err
Error in line 3: A536 A297 348,4
Error in line 5: rhc4 A297 69,Q
Error in line 10: buG A297 45,6
